--- a/general.yaml
+++ b/general.yaml
@@ -1,7 +1,6 @@
-"en":
-    "name": "Tjark Sievers"
-    "email": "tsievers@physnet.uni-hamburg.de"
-    "website": "tjarksievers.de"
-    "other_links": [
-        "Gitlab": "gitlab.com/Ruberhauptmann"
-    ]
+en:
+  name: "Tjark Sievers"
+  email: "tsievers@physnet.uni-hamburg.de"
+  website: "tjarksievers.de"
+  other_links:
+    Gitlab: "gitlab.com/Ruberhauptmann"
