--- a/work_experience.yaml
+++ b/work_experience.yaml
@@ -1,27 +1,23 @@
-"en":
-    "Physnet":
-        "position": "Student employee"
-        "company": "Physnet"
-        "achievements": [
-            ""
-        ]
-        "location": "Hamburg"
-        "startdate": 2021-11-01
-    "3s":
-        "position": "IT-Support"
-        "company": "Schul-Support-Service/HiTeC e.V."
-        "achievements": [
-            "Carrying out changes as change manager (according to ITIL)",
-            "Advising teachers on hardware acquisition and Linux programms",
-            "Installing and configuring of Linux servers",
-            "First and second level support for Linux servers and clients"
-        ]
-        "location": "Hamburg"
-        "startdate": 2019-05-01
-        "enddate": 2021-09-01
-    "FSJ":
-        "position": "Volunteer Service in culture and education"
-        "company": "Bayerische Musikakademie Schloss Alteglofsheim"
-        "location": "Alteglofsheim"
-        "startdate": 2017-09-01
-        "enddate": 2018-08-01
+en:
+  Physnet:
+    position: "Student employee"
+    company: "Physnet"
+    location: "Hamburg"
+    startdate: 2021-11-01
+  3s:
+    position: "IT-Support"
+    company: "Schul-Support-Service/HiTeC e.V."
+    achievements: 
+        - "Carried out changes as change manager (according to ITIL)"
+        - "Advised teachers on hardware acquisition and Linux programms"
+        - "Installed and configured Linux servers"
+        - "First and second level support for Linux servers and clients"
+    location: "Hamburg"
+    startdate: 2019-05-01
+    enddate: 2021-09-01
+  FSJ:
+    position: "Volunteer Service in culture and education"
+    company: "Bayerische Musikakademie Schloss Alteglofsheim"
+    location: "Alteglofsheim"
+    startdate: 2017-09-01
+    enddate: 2018-08-01
