Remove quotes from yaml strings

--- a/general.yaml
+++ b/general.yaml
@@ -1,6 +1,6 @@
 en:
-  name: "Tjark Sievers"
-  email: "tsievers@physnet.uni-hamburg.de"
-  website: "tjarksievers.de"
+  name: Tjark Sievers
+  email: tsievers@physnet.uni-hamburg.de
+  website: tjarksievers.de
   other_links:
-    Gitlab: "gitlab.com/Ruberhauptmann"
+    Gitlab: gitlab.com/Ruberhauptmann
