--- a/work_experience.yaml
+++ b/work_experience.yaml
@@ -14,19 +14,18 @@ en:
       - Developed a Flask-based web app to accelerate typical tasks of distributing hardware
     location: Hamburg
     startdate: 2021-11-01
-  3s:
+  3S:
     position: IT-Support
-    company: Schul-Support-Service/HiTeC e.V.
-    achievements: 
-        - Carried out changes as change manager (according to ITIL)
-        - Installed and configured Linux servers
-        - First and second level support for Linux servers and clients
+    company: 3S/HiTeC e.V.
+    achievements:
+      - Installed and configured Linux servers
+      - First and second level support for Linux servers and clients
     location: Hamburg
     startdate: 2019-05-01
     enddate: 2021-09-30
   FSJ:
     position: Volunteer Service in culture and education
-    company: Bayerische Musikakademie Schloss Alteglofsheim
+    company: Musikakademie Alteglofsheim
     location: Alteglofsheim
     startdate: 2017-09-01
     enddate: 2018-08-31
