Some changes to account for theme update

--- a/general.yaml
+++ b/general.yaml
@@ -3,5 +3,5 @@ en:
   email: tsievers@physnet.uni-hamburg.de
   website: tjarksievers.de
   other_links:
-    gitlab: gitlab.com/Ruberhauptmann
-    linkedin: linkedin.com/in/tjark-sievers-5b95822b9/
+    Gitlab: gitlab.com/Ruberhauptmann
+    LinkedIn: linkedin.com/in/tjark-sievers-5b95822b9/
