--- a/technical_skills.yaml
+++ b/technical_skills.yaml
@@ -3,6 +3,7 @@ en:
     name: Python
     projects:
       saboga:
+        name: Saboga
         description: An API to log played boardgames, built using FastAPI and SQLModel.
         link: tjarksievers.de/projects/saboga-backend
       verleihnix:
@@ -12,17 +13,20 @@ en:
     name: Docker
     projects:
       tjarksievers.de:
+        name: tjarksievers.de
         description: I run some applications under tjarksievers.de using Docker.
         link: tjarksievers.de/projects/tjarksievers.de
   tailwindCSS:
     name: TailwindCSS
     projects:
         sunflower:
+          name: Sunflower
           description: A clean Hugo theme with yellows and greens using TailwindCSS and DaisyUI components.
           link: tjarksievers.de/projects/sunflower
   SvelteKit:
     name: SvelteKit
     projects:
       saboga:
+        name: Saboga
         description: A frontend for saboga, the API to log played boardgames.
         link: tjarksievers.de/projects/saboga-frontend/
