--- a/technical_skills.yaml
+++ b/technical_skills.yaml
@@ -1,33 +1,43 @@
 en:
-  python:
-    name: Python
-    projects:
-      saboga:
-        name: Saboga
-        description: An API to log played boardgames, built using FastAPI and SQLModel.
-        link: tjarksievers.de/projects/saboga-backend
-      verleihnix:
-        name: Verleihnix
-        description: Internal tool for managing inventory written in Django, built during my time as a student employee at PHYSnet Hamburg.
-        link: tjarksievers.de/projects/verleihnix
-  docker:
-    name: Docker
-    projects:
-      tjarksievers.de:
-        name: tjarksievers.de
-        description: The appplications under tjarksievers.de run under Docker, with automatic deployment via Gitlab CI.
-        link: tjarksievers.de/projects/tjarksievers.de
-  tailwindCSS:
-    name: TailwindCSS
-    projects:
+  languages:
+    python:
+      name: Python
+      projects:
+        saboga:
+          name: Saboga
+          description: An API to log played boardgames, built using FastAPI and SQLModel.
+          link: tjarksievers.de/projects/saboga-backend
+        verleihnix:
+          name: Verleihnix
+          description: Internal tool for managing inventory written in Django, built during my time as a student employee at PHYSnet Hamburg.
+          link: tjarksievers.de/projects/verleihnix
+    latex:
+      name: LaTeX
+      projects:
+        bachelorthesis:
+          name: Bachelorthesis
+          description:
+          link: tjarksievers.de/projects/bachelorthesis
+  web:
+    tailwindCSS:
+      name: TailwindCSS
+      projects:
         sunflower:
           name: Sunflower
           description: A clean Hugo theme with yellows and greens using TailwindCSS and DaisyUI components.
           link: tjarksievers.de/projects/sunflower
-  SvelteKit:
-    name: SvelteKit
-    projects:
-      saboga:
-        name: Saboga
-        description: A frontend for saboga, the API to log played boardgames.
-        link: tjarksievers.de/projects/saboga-frontend/
+    SvelteKit:
+      name: SvelteKit
+      projects:
+        saboga:
+          name: Saboga
+          description: A frontend for saboga, the API to log played boardgames.
+          link: tjarksievers.de/projects/saboga-frontend/
+  other:
+    docker:
+      name: Docker
+      projects:
+        tjarksievers.de:
+          name: tjarksievers.de
+          description: The appplications under tjarksievers.de run under Docker, with automatic deployment via Gitlab CI.
+          link: tjarksievers.de/projects/tjarksievers.de
