Some more projects

--- a/technical_skills.yaml
+++ b/technical_skills.yaml
@@ -5,18 +5,25 @@ en:
       projects:
         saboga:
           name: Saboga
-          description: An API to log played boardgames, built using FastAPI and SQLModel.
+          description: An API to log played boardgames, built using FastAPI and Beanie on MongoDB.
           link: tjarksievers.de/projects/saboga-backend
         verleihnix:
           name: Verleihnix
-          description: Internal tool for managing inventory written in Django, built during my time as a student employee at PHYSnet Hamburg.
+          description: Internal tool for inventory management. Written in Django, built during my time as a student employee at PHYSnet Hamburg.
           link: tjarksievers.de/projects/verleihnix
     latex:
       name: LaTeX
       projects:
         bachelorthesis:
           name: Bachelorthesis
-          description:
+          link: tjarksievers.de/projects/bachelorthesis
+  scientific packages:
+    quantum espresso:
+      name: Quantum Espresso
+      projects:
+        bachelorthesis:
+          name: Bachelorthesis
+          description: During my thesis I ran DFT electronic structure and phonon calculations.
           link: tjarksievers.de/projects/bachelorthesis
   web:
     tailwindCSS:
@@ -26,6 +33,10 @@ en:
           name: Sunflower
           description: A clean Hugo theme with yellows and greens using TailwindCSS and DaisyUI components.
           link: tjarksievers.de/projects/sunflower
+        verleihnix:
+          name: Verleihnix
+          description: Internal tool for managing inventory written in Django, built during my time as a student employee at PHYSnet Hamburg.
+          link: tjarksievers.de/projects/verleihnix
     SvelteKit:
       name: SvelteKit
       projects:
@@ -41,3 +52,10 @@ en:
           name: tjarksievers.de
           description: The appplications under tjarksievers.de run under Docker, with automatic deployment via Gitlab CI.
           link: tjarksievers.de/projects/tjarksievers.de
+    HPC:
+      name: High-Performance Computing
+      projects:
+        bachelorthesis:
+          name: Bachelorthesis
+          description: During my thesis I ran DFT electronic structure and phonon calculations.
+          link: tjarksievers.de/projects/bachelorthesis
