--- a/work_experience.yaml
+++ b/work_experience.yaml
@@ -4,7 +4,7 @@ en:
       position: Student employee
       company: PHYSnet, Universität Hamburg
       achievements:
-        - Developed a Flask-based web app to accelerate typical tasks of distributing hardware
+        - "Developed a Flask-based web app to accelerate typical tasks of distributing hardware"
       location: Hamburg
       startdate: 2021-11-01
       enddate: 2024-03-31
@@ -12,7 +12,7 @@ en:
       position: Research assistant
       company: Dr. Thore Posske, Universität Hamburg
       achievements:
-        - "Helped develop a course book for the course 'Topology in Condensed Matter Physics'"
+        - "Helped typeset a course book for the course 'Topology in Condensed Matter Physics'"
       location: Hamburg
       startdate: 2023-09-01
       enddate: 2023-10-31
@@ -20,8 +20,8 @@ en:
       position: IT-Support
       company: 3S/HiTeC e.V.
       achievements:
-        - Installed and configured Linux servers
-        - First and second level support for Linux servers and clients
+        - "Installed and configured Linux servers"
+        - "First and second level support for Linux servers and clients"
       location: Hamburg
       startdate: 2019-05-01
       enddate: 2021-09-30
