--- a/education.yaml
+++ b/education.yaml
@@ -5,7 +5,7 @@ en:
       institution: Universität Hamburg
       location: Hamburg
       date: 2022-10-01
-      notes: "4/2024 - 7/2024: Stay at Uppsala University"
+      notes: "4/2024 - 7/2024: Stay at Uppsala University for master's thesis"
       grade: "1.11"
   former:
     bachelor:
