--- a/general.yaml
+++ b/general.yaml
@@ -4,5 +4,5 @@ en:
   website: tjarksievers.de
   orcid: orcid.org/0000-0002-4365-7729
   other_links:
-    Gitlab: gitlab.com/Ruberhauptmann
+    Github: github.com/Ruberhauptmann
     LinkedIn: linkedin.com/in/tjark-sievers-5b95822b9/
