--- a/technical_skills.yaml
+++ b/technical_skills.yaml
@@ -11,6 +11,10 @@ en:
           name: Verleihnix
           description: Internal tool for inventory management. Written in Django, built during my time as a student employee at PHYSnet Hamburg.
           link: tjarksievers.de/projects/verleihnix
+        quant-met:
+          name: quant-met
+          description: Software package to study superconductivity in flat-band systems.
+          link: tjarksievers.de/projects/quant-met
     latex:
       name: LaTeX
       projects:
@@ -42,7 +46,7 @@ en:
       projects:
         saboga:
           name: Saboga
-          description: A frontend for saboga, the API to log played boardgames.
+          description: A frontend for the Saboga API.
           link: tjarksievers.de/projects/saboga-frontend/
   other:
     docker:
@@ -54,8 +58,3 @@ en:
           link: tjarksievers.de/projects/tjarksievers.de
     HPC:
       name: High-Performance Computing
-      projects:
-        bachelorthesis:
-          name: Bachelorthesis
-          description: During my thesis I ran DFT electronic structure and phonon calculations.
-          link: tjarksievers.de/projects/bachelorthesis
