Reorganize technical skills, add Jülich school

--- a/schools_conferences.yaml
+++ b/schools_conferences.yaml
@@ -6,3 +6,5 @@ en:
       enddate: 2024-09-20
       location: Jülich
       url: www.cond-mat.de/events/correl24/
+      poster: raw.githubusercontent.com/Ruberhauptmann/juelichautumn2024-poster/main/poster.pdf
+      post_name: "Poster for the Jülich 2024 Autumn School on Correlated Electrons"
