--- a/schools_conferences.yaml
+++ b/schools_conferences.yaml
@@ -6,4 +6,4 @@ en:
     location: Jülich
     url: www.cond-mat.de/events/correl24/
     poster: raw.githubusercontent.com/Ruberhauptmann/juelichautumn2024-poster/main/poster.pdf
-    post_title: "Poster for the Jülich 2024 Autumn School on Correlated Electrons"
+    poster_title: "Poster for the Jülich 2024 Autumn School on Correlated Electrons"
