--- a/general.yaml
+++ b/general.yaml
@@ -2,7 +2,7 @@ en:
   name: Tjark Sievers
   email: tsievers@physnet.uni-hamburg.de
   website: tjarksievers.de
-  orcid: orcid.org/0000-0002-4365-7729
   other_links:
+    Orcid: orcid.org/0000-0002-4365-7729
     Github: github.com/Ruberhauptmann
     LinkedIn: linkedin.com/in/tjark-sievers-5b95822b9/
