--- a/general.yaml
+++ b/general.yaml
@@ -6,3 +6,12 @@ en:
     Orcid: orcid.org/0000-0002-4365-7729
     Github: github.com/Ruberhauptmann
     LinkedIn: linkedin.com/in/tjark-sievers-5b95822b9/
+
+de:
+  name: Tjark Sievers
+  email: tsievers@physnet.uni-hamburg.de
+  website: tjarksievers.de
+  other_links:
+    Orcid: orcid.org/0000-0002-4365-7729
+    Github: github.com/Ruberhauptmann
+    LinkedIn: linkedin.com/in/tjark-sievers-5b95822b9/
