--- a/schools_conferences.yaml
+++ b/schools_conferences.yaml
@@ -7,3 +7,13 @@ en:
     url: www.cond-mat.de/events/correl24/
     poster: raw.githubusercontent.com/Ruberhauptmann/juelichautumn2024-poster/main/poster.pdf
     poster_title: "Poster for the Jülich 2024 Autumn School on Correlated Electrons"
+
+de:
+  juelich:
+    name: "Autumn School on Correlated Electrons: Correlations and Phase Transitions"
+    startdate: 2024-09-16
+    enddate: 2024-09-20
+    location: Jülich
+    url: www.cond-mat.de/events/correl24/
+    poster: raw.githubusercontent.com/Ruberhauptmann/juelichautumn2024-poster/main/poster.pdf
+    poster_title: "Poster für Jülich 2024 Autumn School on Correlated Electrons"
