Translate data into German

--- a/education.yaml
+++ b/education.yaml
@@ -28,7 +28,7 @@ de:
       institution: Universität Hamburg
       location: Hamburg
       date: 2022-10-01
-      notes: "4/2024 - 7/2024: Aufenthalt an Uppsala University für Masterarbeit"
+      notes: "4/2024 - 7/2024: Aufenthalt an der Uppsala University für Masterarbeit"
       grade: "1.11"
   former:
     bachelor:
