--- a/technical_skills.yaml
+++ b/technical_skills.yaml
@@ -5,7 +5,7 @@ en:
       projects:
         saboga:
           name: Saboga
-          description: A service to log played boardgames, built using FastAPI and Beanie on MongoDB.
+          description: A service to scrape and view boardgamegeek data, built using FastAPI and Beanie on MongoDB.
           link: tjarksievers.de/projects/saboga-backend
         verleihnix:
           name: Verleihnix
@@ -46,7 +46,7 @@ en:
       projects:
         tjarksievers.de:
           name: tjarksievers.de
-          description: The appplications under tjarksievers.de run under Docker, with automatic deployment via Gitlab CI.
+          description: The appplications under tjarksievers.de run under Docker, with automatic deployment via Github Actions.
           link: tjarksievers.de/projects/tjarksievers.de
     HPC:
       name: High-Performance Computing
@@ -63,21 +63,21 @@ de:
       projects:
         saboga:
           name: Saboga
-          description: A service to log played boardgames, built using FastAPI and Beanie on MongoDB.
+          description: Ein Service um boardgamegeek Daten zu scrapen und auszugeben, gebaut mithilfe von FastAPI und Beanie auf MongoDB.
           link: tjarksievers.de/projects/saboga-backend
         verleihnix:
           name: Verleihnix
-          description: Internal tool for inventory management. Written in Django, built during my time as a student employee at PHYSnet Hamburg.
+          description: Internes Django-Tool um Inventardaten zu managen, entstanden in meiner Zeit als studentisch Angestellter am PHYSnet Hamburg.
           link: tjarksievers.de/projects/verleihnix
         quant-met:
           name: quant-met
-          description: Software package to study superconductivity in flat-band systems.
+          description: Software-Paket um Supraleitung in Systemen mit flachen Elektronen-Bändern zu untersuchen.
           link: tjarksievers.de/projects/quant-met
     latex:
       name: LaTeX
       projects:
         bachelorthesis:
-          name: Bachelorthesis
+          name: Bachelorarbeit
           link: tjarksievers.de/projects/bachelorthesis
   web:
     tailwindCSS:
@@ -85,18 +85,18 @@ de:
       projects:
         sunflower:
           name: Sunflower
-          description: A clean Hugo theme with yellows and greens using TailwindCSS and DaisyUI components.
+          description: Ein sauberes Theme für Hugo, mit Gelb und Grüntönen, nutzt TailwindCSS und DaisyUI Komponenten.
           link: tjarksievers.de/projects/sunflower
         verleihnix:
           name: Verleihnix
-          description: Internal tool for managing inventory written in Django, built during my time as a student employee at PHYSnet Hamburg.
+          description: Internes Django-Tool um Inventardaten zu managen, entstanden in meiner Zeit als studentisch Angestellter am PHYSnet Hamburg.
           link: tjarksievers.de/projects/verleihnix
     SvelteKit:
       name: SvelteKit
       projects:
         saboga:
           name: Saboga
-          description: A frontend for the Saboga API.
+          description: Ein Frontend für die saboga API.
           link: tjarksievers.de/projects/saboga-frontend/
   technologies:
     docker:
@@ -104,12 +104,12 @@ de:
       projects:
         tjarksievers.de:
           name: tjarksievers.de
-          description: The appplications under tjarksievers.de run under Docker, with automatic deployment via Gitlab CI.
+          description: Die Anwendungen unter tjarksievers.de laufen als Docker-Container, mit automatischen Deployment via Github Action.
           link: tjarksievers.de/projects/tjarksievers.de
     HPC:
       name: High-Performance Computing
       projects:
         bachelorthesis:
           name: Bachelorthesis
-          description: During my thesis I ran DFT electronic structure and phonon calculations with Quantum Espresso.
+          description: In meiner Bachelorarbeit habe ich mithilfe des DFT-Pakets Quantum Espresso elektronische Struktur und Phononen-Rechnungen durchgeführt.
           link: tjarksievers.de/projects/bachelorthesis
