--- a/schools_conferences.yaml
+++ b/schools_conferences.yaml
@@ -1,6 +1,6 @@
 en:
   juelich:
-    name: "Autumn School on Correlated Electrons: Correlations and Phase Transitions"
+    name: "Autumn School on Correlated Electrons"
     startdate: 2024-09-16
     enddate: 2024-09-20
     location: Jülich
@@ -10,7 +10,7 @@ en:
 
 de:
   juelich:
-    name: "Autumn School on Correlated Electrons: Correlations and Phase Transitions"
+    name: "Autumn School on Correlated Electrons"
     startdate: 2024-09-16
     enddate: 2024-09-20
     location: Jülich
