--- a/schools_conferences.yaml
+++ b/schools_conferences.yaml
@@ -5,6 +5,7 @@ en:
     enddate: 2024-09-20
     location: Jülich
     url: www.cond-mat.de/events/correl24/
+    poster_title: "Superconducting phase stiﬀness and coherence length from a finite momentum pairing constraint"
 
 de:
   juelich:
@@ -13,3 +14,4 @@ de:
     enddate: 2024-09-20
     location: Jülich
     url: www.cond-mat.de/events/correl24/
+    poster_title: "Superconducting phase stiﬀness and coherence length from a finite momentum pairing constraint"
