--- a/research_projects.yaml
+++ b/research_projects.yaml
@@ -3,7 +3,7 @@ en:
     name: "Superconductivity in flat bands"
     institution: "University of Hamburg and Uppsala University"
     notes: [
-      "Test 2"
+      "Test 2",
       "Supervisors: Prof. Annica Black-Schaffer, Prof. Tim Wehling",
     ]
 
