--- a/schools_conferences.yaml
+++ b/schools_conferences.yaml
@@ -1,6 +1,6 @@
 en:
   juelich:
-    name: "Autumn School on Correlated Electrons"
+    name: "Autumn school on correlated electrons"
     startdate: 2024-09-16
     enddate: 2024-09-20
     location: Jülich
@@ -9,7 +9,7 @@ en:
 
 de:
   juelich:
-    name: "Autumn School on Correlated Electrons"
+    name: "Autumn school on correlated electrons"
     startdate: 2024-09-16
     enddate: 2024-09-20
     location: Jülich
