Final things in research projects

--- a/research_projects.yaml
+++ b/research_projects.yaml
@@ -6,7 +6,7 @@ en:
     enddate: 2025-03-31
     notes: [
       "Investigated superconductivity in a Graphene-like system with a flat electronic band",
-      "Analyzed the connection between characteristic superconducting quantities and quantum geometry",
+      "Analyzed the connection between superconducting quantities and quantum geometry",
       "Supervisors: Prof. Annica Black-Schaffer, Prof. Tim Wehling",
     ]
 
