--- a/general.yaml
+++ b/general.yaml
@@ -1,6 +1,6 @@
 en:
   name: Tjark Sievers
-  email: tsievers@physnet.uni-hamburg.de
+  email: tjarksievers@icloud.com
   website: tjarksievers.de
   other_links:
     Orcid: orcid.org/0000-0002-4365-7729
@@ -9,7 +9,7 @@ en:
 
 de:
   name: Tjark Sievers
-  email: tsievers@physnet.uni-hamburg.de
+  email: tjarksievers@icloud.com
   website: tjarksievers.de
   other_links:
     Orcid: orcid.org/0000-0002-4365-7729
